--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <!--test-->
 
 <head>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../B100toB60/CSS/styles.css">
+    <link rel="shortcut icon" href="./media/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./media/favicon/favicon.ico" type="image/x-icon">
     <title>B100 to B60</title>
 </head>
 
@@ -42,7 +44,7 @@
 
     </p>
     <p class="finalAnswer" id="finalAnswer"></p>
-    <script src="../B100toB60/JavaScript/engine.js"></script>
+    <script src="./JavaScript/app.js"></script>
 
 </body>
 
