--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Durée à convertir ?
     </div>
     <div class="askingTitleBonus">
-        (Base 100, au format 8.5 , 17.77)
+        (Base 100, au format h.m )
     </div>
     <p>
 
